<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flexDirection="column"
    app:alignItems="flex_start"
    app:alignContent="stretch"
    app:flexWrap="nowrap"
    android:background="@color/LGreen"
    >
    <ImageView
        android:layout_width="match_parent"
        android:contentDescription="@string/signup_picture_description"
        android:layout_height="270dp"
        android:src="@drawable/login_cat"
        android:scaleType="fitCenter"
        android:padding="20dp"
        app:layout_alignSelf="center"
        app:layout_flexShrink="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:text="@string/login_username"
        />
    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/DPink"
        android:textColor="@color/Black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login_pass"
        android:textColor="@color/Black"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="@color/DPink"
        android:textColor="@color/Black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login_button"
            android:background="@color/LPink"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_centerInParent="true"
            android:onClick="login"
            />
        <TextView
            android:id="@+id/account_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/Black"
            android:onClick="toSignupPage"
            />
    </RelativeLayout>
</com.google.android.flexbox.FlexboxLayout>
